[gd_scene load_steps=2 format=3 uid="uid://1w2oo3lfk67c"]

[ext_resource type="Script" path="res://Menu/Scripts/payload_menu_row.gd" id="1_k5n7t"]

[node name="PayloadContainer" type="Panel"]
custom_minimum_size = Vector2(0, 31)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -234.0
offset_bottom = -617.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k5n7t")

[node name="ValuesRowContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 917.0
offset_bottom = 31.0

[node name="IDNumberContainer" type="PanelContainer" parent="ValuesRowContainer"]
layout_mode = 2

[node name="IDNumberLabel" type="Label" parent="ValuesRowContainer/IDNumberContainer"]
custom_minimum_size = Vector2(30, 31)
layout_mode = 2
text = "5000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameContainer" type="PanelContainer" parent="ValuesRowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLine" type="LineEdit" parent="ValuesRowContainer/NameContainer"]
custom_minimum_size = Vector2(750, 31)
layout_mode = 2
placeholder_text = "Name"

[connection signal="text_changed" from="ValuesRowContainer/NameContainer/NameLine" to="." method="_on_name_line_text_changed"]
